--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,14 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/4zsxmie7jafqhbwun3nwbwsfjy'>Data Scientist | Strategic Employment</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twitch/jobs/4495420002'>Job Application for Data Scientist at Twitch</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -142,7 +150,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
+<h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -194,7 +202,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/farfetch/job/oPUobfw2'>Farfetch Careers - Senior Data Science Engineer (Mandarin)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oPUobfw2'>Farfetch Careers - Senior Data Science Engineer (Mandarin)</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -247,7 +255,7 @@ and?...</p>
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ETRSearch/743999698208172-data-scientist-kuala-lumpur'>ETR Search Data Scientist - Kuala Lumpur | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur Kuala Lumpur  Kuala Lumpur Kuala Lumpur Malaysia  Malaysia Kuala Lumpur</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -283,7 +291,7 @@ and?...</p>
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shapesecurity/11737206-b5c2-4ffa-8ceb-8fd4c083473c'>Shape Security - Data Scientist/Analyst Santa Clara</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shapesecurity/11737206-b5c2-4ffa-8ceb-8fd4c083473c'>Shape Security - Data Scientist/Analyst Santa Clara</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -402,7 +410,7 @@ Data Science & Engineering. full-time. Submit your application. Resume/CV ?.</p>
 <p>2 days ago ... KAYAK or OpenTable (as the case may be) will process your personal data in 
 accordance with data protection law for the purposes described in our privacy?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698124393-senior-data-scientist-h-f-'>Ubisoft Senior Data Scientist (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698124393-senior-data-scientist-h-f-'>Ubisoft Senior Data Scientist (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -476,7 +484,7 @@ accordance with data protection law for the purposes described in our privacy?..
 <p><span class="badge badge-light">Berlin, Germany  Berlin San Francisco New York Singapore Tokyo Seoul Beijing</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/j71cm7f7twxzan856pdhm9ustw'>Senior Data Science Recruiter | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/j71cm7f7twxzan856pdhm9ustw'>Senior Data Science Recruiter | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  New York City</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -497,14 +505,6 @@ accordance with data protection law for the purposes described in our privacy?..
 <p>Oct 15, 2019 ... The Merrill Lynch Wealth Management (MLWM) Business Oversight and 
 Supervision Data Scientist Manager is responsible for coordinating efforts on the
 ?...</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/figma/2e3ff65a-467b-4a1c-8163-a529efedad20'>Figma - Data Science Manager</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nws3iMwA&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
-<p><span class="badge badge-light">Tokyo, Japan</span></p>
-<p>Posted on:: 2019-10-24</p>
 <hr/>
 
 
